<resources>
    <string name="app_name">Liquid Swipe Test</string>
    <string name="Skip">Алгасах</string>
    <string name="Easy">Хялбар</string>
    <string name="firstPage_description">Дэлхийн хаанаас ч хүссэн ажлын байраа олох боломж</string>
    <string name="secondPage_description">Ухаалаг утасны тусламжтай хамгийн хурднаар ажлын байраа сонгох боломж</string>
    <string name="All_in_one">Нэгдсэн зар</string>
    <string name="Fast">Шуурхай</string>
    <string name="thirdPage_description">Бүх төрлийн ажлын байрны зарыг нэг дороос хайх боломж</string>
    <string name="splash_text">TeamProject</string>
    <string name="Rule">Нэг. Нийтлэг үндэслэл</string>
    <string name="Rule_1.1">

1.1 Бид (цаашид “ Гүйцэтгэгч” гэнэ ) –н хамтран ажиллах үйлчилгээний нөхцөл болно.

1.2 Энэхүү нөхцөл нь Харилцагч байгууллага (цаашид “Захиалагч” гэнэ) зар нийтлэх эрх (цаашид “Гишүүнчлэл” гэнэ) 
        авахаас өмнө хүлээн зөвшөөрч баталгаажуулсны үндсэн дээр хэрэгжинэ.

    </string>
    <string name="Rule_2">

        Хоёр. Гүйцэтгэгчийн эрх, үүрэг, хүлээх хариуцлага</string>
    <string name="Rule_2.1">

2.1 Гүйцэтгэгч тал нь өөрийн ажлын байр хайх ухаалаг систем дээр Захиалагчийн ажлын байрны зар болон бусад реклам сурталчилгааны мэдээлэл 
        байршуулан хэрэглэгчиддээ хүргэх ажлыг мэргэжлийн өндөр төвшинд, ямар нэг гацалт, алдаа, доголдолгүй хийж гүйцэтгэнэ.

2.2 Гүйцэтгэгч нь вэб портал сайтын аюулгүй, тогтвортой ажиллагааг хангаж Захиалагч цаашид мэдээлэл оруулах боломжийг хангаж өгнө.
        /Жич: Тухайн мэдээллийг Захиалагч өөрөө оруулан мэдээллийг засварлах, өөрчлөх, бүрэн боломжтой байх ба шаардлагатай тохиолдолд 
        Захиалагч талын оруулж буй мэдээллийн утга агуулга, дизайны тал дээр Гүйцэтгэгч тал санал, зөвлөгөө өгч болно./

2.3 Гүйцэтгэгч Захиалагч талд системд нэвтрэн орж мэдээлэл оруулах, мэдээллээ засварлах, устгах эрх бүхий нэвтрэх нэр, нууц үгийг олгох 
        бөгөөд нууц үгээ алдсанаас болж үүсэх асуудлыг Гүйцэтгэгч хариуцахгүй болно.

2.4 Гүйцэтгэгч нь вэб портал сайтынхаа өдөр тутмын аюулгүй байдлыг ханган ажиллаж Захиалагч талын мэдээллийг гадны халдлагаас сэргийлэн ажиллана.

2.5 Захиалагчийн нийлүүлсэн мэдээ, мэдээллийн нууцыг хадгалж, гуравдагч этгээдэд дамжуулахгүй, аливаа хэлбэрээр задруулахгүй байх үүрэгтэй.

2.6 Гүйцэтгэгч тал нь сайтыг шинэчлэх, засварлах тохиолдолд Захиалагч талын өмнө оруулсан мэдээ мэдээллийг хэвээр байршуулах үүрэгтэй 
        бөгөөд сайтын бүтэц зохион байгуулалт өөрчлөгдөх тохиолдолд тухайн өөрчлөлтийн талаарх мэдээлэл болон ашиглалтын талаарх шаардлагатай 
        заавар зааварчилгааг Захиалагч талд тухай бүр өгөх үүрэгтэй.

2.7 Захиалагч нь Гүйцэтгэгч талтай ижил төрлийн үйл ажиллагаа явуулдаг буюу хүний нөөцийн бүрдүүлэлт, сонгон шалгаруулалт хийдэг, 
        хүний нөөцийн зөвлөх үйл ажиллагаа явуулдаг бол Гүйцэтгэгч тал дангаар гишүүнчлэлийг цуцлах эрхтэй.

2.8 Хэрэв 3.2, 3.3 заалтыг захиалагч тал биелүүлээгүй тохиолдолд гүйцэтгэгч тал тухайн ажлын зарыг нийтлэхгүй байх эрхтэй.

    </string>
    <string name="Rule_3">

Гурав. Захиалагчийн эрх, үүрэг, хүлээх хариуцлага
    </string>
    <string name="Rule_3.1">

3.1 Захиалагч талын сурталчилгаа болон мэдээ, нийтлэл нь Монгол Улсын зар сурталчилгааны тухай болон бусад хууль тогтоомжоор 
        хориглосон бараа бүтээгдэхүүн, үйлчилгээг сурталчлаагүй байна.

3.2 Захиалагч нь тухайн гишүүнчлэлийн эрхийн хүрээнд групп компанийн бусад охин компаниудын ажлын зарыг оруулахгүй байх үүрэгтэй.

3.3 Захиалагч тал нь анкет хүлээн авахдаа зөвхөн гүйцэтгэгч талын анкет загварыг ашиглах үүрэгтэй.

3.4 Шинээр оруулсан ажлын байрны зарыг тухайн өдөрт дахин зарлахгүй байх үүрэгтэй.

3.5 Ажил хайгчийн булангаас авсан мэдээллийг ажлын хэрэгцээнээс бусад зорилгоор ашиглах, цааш нь задруулахгүй байх үүрэгтэй.

3.6 Зарын гарчиг болон агуулгаар дамжуулан 2 ба түүнээс дээш ажлын байрны зар нийтлэхгүй байх үүрэгтэй.

3.7 Зарын талбаруудыг зориулалтын дагуу бөглөх үүрэгтэй.

3.8 Захиалагч нь веб сайтын үйлчилгээний нөхцөлийн дагуу зар, мэдээ, мэдээллээ тавих үүрэгтэй.

3.9 Захиалагч мэдээ, нийтлэлдээ санал, сэтгэгдэл авах эсэхийг шийдвэрлэх эрхтэй ба сэтгэгдэл авсан тохиолдолд хэрэглэгчдээс ирүүлсэн санал, 
        сэтгэгдэлд хариуцлага хүлээхгүй болно.

3.10 Захиалагч нь зарласан реклам сурталчилгаа, мэдээллийн үнэн бодит байдлыг хариуцна.

    </string>
    <string name="Rule_4">

        Дөрөв. Бусад зүйл </string>
    <string name="Rule_4.1">

4.1 Аль нэг талын гэм буруугаас гишүүнчлэлийг хугацаанаас нь өмнө цуцлах, үйлчилгээний нөхцөлтэй холбоотой талуудын 
        хооронд үүсэх аливаа маргаантай асуудлыг талууд харилцан зөвшилцөх замаар шийдвэрлэнэ. 
        Зөвшилцөлд хүрээгүй тохиолдолд шүүхээр шийдвэрлүүлнэ.</string>
    <string name="Yes">Зөвшөөрч байна</string>
    <string name="No">Үгүй</string>
    <string name="Rule_user">
        Үйлчилгээний журам
    </string>
    <string name="Rule_user1">
Бид нь танд дараах нөхцөлийн дагуу үйлчлэх бөгөөд үйлчлүүлэгчид энэхүү үйлчилгээний нөхцөлийг баримтлан үйлчлүүлнэ.
    </string>
    <string name="Rule_user2">
Бүртгэлийн зарчим
    </string>
    <string name="Rule_user2.1">
Хэрэглэгч нь ажлын байр хайх ухаалаг үйлчилгээг хэрэглэхээр бүртгүүлэхдээ аппликейшны бүртгэлийн хуудсанд болон 
        Мэргэжлийн Профайл хэсэгт өөрийн тухай үнэн зөв мэдээллийг оруулж өгч тэдгээрийн өөрчлөлтийг цаг тухай бүрд нь хийж байх үүрэгтэй. 
        Хэн нэгэн хэрэглэгчийн оруулсан шаардлагатай мэдээлэл ямар нэгэн байдлаар худлаа байх эсвэл бид таны мэдээллийг худлаа гэдгийг 
        шалтгаантайгаар сэжиглэвэл бид тухайн хэрэглэгчийн бүртгэлийг хасах түүнд цаашид үйлчилгээ үзүүлэхээс татгалзах эрхтэй.
    </string>
    <string name="Rule_user3">Хэрэглэгчийн бүртгэл түүний аюулгүй байдал</string>
    <string name="Rule_user3.1">
Та бид бүртгэл үүсгэхдээ өөрийн сонгосон давхардаагүй хэрэглэгчийн нэр болон нууц үгийг үүсгэнэ. 
    Та өөрийн хэрэглэгчийн нэр нууц үгийг бүрэн хариуцах бөгөөд таны бүртгэлээс хийгдсэн бүхий л үйлдэлд хэрэглэгч өөрөө хариуцлага хүлээх болох болно. 
    Та ажлын байх хайх системээр үйлчлүүлж байх явцад SSL буюу өндөр нууцлалтайгаар мэдээлэл дамжуулах технологийг ашиглах боломжтой бөгөөд сүлжээгээр 
    таны мэдээлэл аюулгүй дамжуулагдан мэдээллийн баазад хадгалагдах болно. Иймээс та хэрэглэгчийн нэр, нууц үгээ дамжуулахгүй байж хэрэглэснийхээ дараа 
    бүртгэлээ хааж байна уу! Танд мэдэгдэлгүйгээр хэн нэгэн таны бүртгэлийг хэрэглэсэн байж болох сэжиг илэрвэл бидэнд яаралтай мэдэгдэнэ үү!
</string>
    <string name="Rule_user4">
Хэрэглэгчийн хариуцлага
    </string>
    <string name="Rule_user4.1">
Хэрэглэгчийн өөрийн бичсэн бичлэг, зурвас, танилцуулга, үйлчилгээ ажлын байр зэрэг бүхий л хувийн болон олон нийтэд зориулсан мэдээ, текст, 
        зураг, видео болон бусад зүйлс нь дан ганц тухайн хэрэглэгчийн хариуцлага юм. Хэрэглэгчийн үйлдэлд ямар нэгэн хариуцлага хүлээхгүй бөгөөд 
        тухайн хэрэглэгч гуравдагч этгээдэд болон сүлжээнд учруулсан ямар нэгэн хохирлыг зохих хууль дүрмийн дагуу барагдуулах үүрэгтэй.
        Хэрэглэгч нь гуравдагч этгээдийн эрх ашгийг зөрчсөн үйлдэл гаргасан тохиолдолд бид тухайн үйлдлийг таслан зогсоох эрхтэй хэдий ч энэ нь заавал 
        гүйцэтгэх үүрэг биш болно.

        Хэрэглэгч, үйлчлүүлэгчдэд дараах зүйлсийг хориглоно.

-Улс төрийн сурталчилгаа хийх,

-Бусдыг айлган сүрдүүлэх, нэр хүндэд халдах

-Ёс бус үг хэллэг хэрэглэх, бусдыг доромжлох

-Аллага хүчирхийллийг дэмжих,

-Бусдын нэр хүнд хувийн нууцад халдах,

-Ялгаварлан гадуурхах, дайрч доромжлох,

-Хувийн болон албаны нууц баримтыг олонд дэлгэх,

-Зохиогчийн эрх зөрчих,

-Зөвшөөрөгдөөгүй зар сурталчилгааны зорилгоор Спам илгээх,

-Бусдад хохирол үзүүлэх зорилгоор вирус болон бусад кодыг илгээх,

-Санаатай болон санамсаргүйгээр бүхий л төрлийн хууль дүрмийг зөрчих зэрэгт ашиглах хориотой! 
        Эдгээр болон хуульд харшлах бусад нөхцөлд бид тухайн гишүүний эрхийг хасах үйлчилгээ үзүүлэхээ зогсоох эрхтэй бөгөөд тухайн хэрэглэгчтэй 
        холбоотой мэдээллийг хуулийн байгууллагын зүгээс шаардсан тохиолдолд холбогдох байгууллагад шилжүүлэх эрхтэй.
</string>
    <string name="Rule_user5">
Үйлчилгээнд өөрчлөлт оруулах
</string>
    <string name="Rule_user5.1">
Бидний нь үзүүлж байгаа үйлчилгээгээ бүхлээр буюу хэсэгчлэн ямар нэг анхааруулгатай болон анхааруулгагүйгээр өөрчлөх эрхтэй!
    </string>
    <string name="Rule_user6">
Холбоос болон сурталчилгаа
    </string>
    <string name="Rule_user6.1">
        Бидний үйлчилгээгээр үйлчлүүлэх явцад танд тохиолдож түншүүдийн төлбөрт сурталчилгаанд энэхүү үйлчилгээний 
        нөхцөл хамаарахгүй бөгөөд тухайн сурталчлагч болон хэрэглэгч таны хоорондох харилцаанд бид хариуцлага хүлээхгүй. 
        Мөн ажлын байр хайх үйлчилгээг хэрэглэх явцад болон бусад байдлаар таны олж авсан холбоосуудад бид ямар нэг хариуцлага хүлээхгүй.
    </string>
    <string name="Rule_user7">
Ажлын байр хайх системийн өмчлөгчийн эрх
</string>
    <string name="Rule_user7.1">
 Нийтлэгдэж байгаа ажлын байрны зар нь бидний өмч болно. Нийтлэгдсэн ажлын байрны зарыг зөвшөөрөлгүйгээр бусдад дамжуулах, 
        хуулбарлан түгээхийг хориглоно.
    </string>
    <string name="security">Нууцлалын баталгаа</string>
    <string name="One">1.Хамрах хүрээ</string>
    <string name="One.1"> Энэхүү аппликейшн вэб сайт болон системийг бүхэлд нь ашиглахтай холбогдсон аливаа мэдээлэл бүтээгдэхүүн Үйлчилгээнүүдийг хамруулан хэрэглэгч
    энэхүү аппликейшнд бүртгүүлж хэрэглэгч болсноор дараах нууцлалын баталгааг хүлээн зөвшөөрсөн илрэл юм.</string>
    <string name="Two"> 2. Хэрэглэгчийн бүртгэл түүний аюулгүй байдал</string>
    <string name="Two.1"> Бид уг системийн хүрээнд  мэдээлэл дамжуулах технологийг ашиглаж интернет сүлжээгээр дамжуулан мэдээллийн баазад хадгалдаг.
    Хэрэглэгч бүртгэл үүсгэх ажлын анкет үүсгэх илгээх үйлчилгээнд бүртгүүлэх санал асуулгад хамрагдах үнэлгээ өгөх зэрэг бусад мэдээллийг хадгалдаг үүнд таны
    хэрэглэгчийн нэр нууц үг овог нэр эмэйл хаяг утасны дугаар хаяг хүйс ажил мэргэжил боловсрол туршлага болон бусад зүйлүүд орно мөн таны оруулсан
    мэдээлэл дээр үндэслэн
    ажлын анкет үүсгэж хадгалагдан хэрэглэгч хувийн мэдээллийн тохиргоог хэдийд ч өөрчлөх эсвэл устгах боломжтой хэрэглэгч нэвтрэх нэр ба нууц
    үгийн нууцлалыг хэрэглэгч өөрөө бүрэн хариуцах
    бөгөөд өөрийн нэвтрэх нэр ба нууц үгийг ямар ч тохиолдолд бусдад дамжуулах ба ил болгож өгвөл болно хэрэглэгч өөрийн үйлдэл ба үйлдлээр
    гишүүнийхээ нэвтрэх нэр ба нууц үгийг бусдад мэдэгдсэнээс
    үүссэн хохирол ба хариуцлагыг хэрэглэгч өөрөө бүрэн хариуцна.</string>
    <string name="Three"> 3.Ажил олгогчийн бүртгэл</string>
    <string name="Three.1">Системд ажил олгогчоор бүртгүүлэхийн тулд байгууллагын тодорхой мэдээлэл шаардлагатай энэхүү мэдээлэл нь таны ажил олгогчийн төлөөлөгчийн
    нэр имэйл хаяг утасны
    дугаар хаяг байгууллагын танилцуулга нэр лого зэргийг агуулна энэхүү мэдээлэл дээр үндэслэн ажлын зарын мэдээлэл бүрдэнэ .</string>
    <string name="Four"> 4.Гуравдагч этгээдийн цуглуулсан мэдээлэл</string>
    <string name="Four.1"> Систем фэйсбүүк эсвэл гүүгл ашиглан нэвтрэх боломжтой таны зөвшөөрлөөр фэйсбүүк эсвэл гүүгл бүртгүүлсэн эмээл хаяг нэр зураг зэрэг мэдээллийг
    ашиглан хэрэглэгчийн бүртгэл үүсгэнэ.</string>
    <string name="Five"> 5.Хэрэглэгч хувийн мэдээллийн нууцлалын тохиргоог өөрчлөх</string>
    <string name="Five.1">  Системд ажил хайгч өөрийн хувийн мэдээллийн нууцлалын тохиргоог хүссэн үедээ өөрчлөх боломжтой.</string>
    <string name="Six"> 6.Нууцлалын бодлогод өөрчлөлт оруулах</string>
    <string name="Six.1"> Энэхүү нууцлалын бодлогын аливаа өөрчлөлт ороход хуудсанд байршуулах ба сүүлд шинэчлэгдсэн
    огноог тусгаж өгнө нууцлалын бодлогод орсон аливаа өөрчлөлт нь хамгийн сүүлийн шинэчлэгдсэн өдрөөс хүчин төгөлдөр мөрдөгдөнө.</string>
    <string name="Markting">Маркетинг,сурталчилгаа</string>
    <string name="phoneNum">7755-5556</string>
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Эхлүүлэх</string>
</resources>