<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        android:paddingStart="45dp"
        android:paddingEnd="45dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="end"
            android:letterSpacing="0.13"
            android:text="@string/Skip"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>


<!--    <ImageView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="200dp"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:layout_marginEnd="64dp"-->
<!--        android:src="@drawable/img_1" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="290dp"
        android:layout_height="316dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="65dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/social_media_marketing" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:fontFamily="sans-serif-condensed"
        android:includeFontPadding="false"
        android:letterSpacing="-0.01"
        android:text="@string/Easy"
        android:textColor="@android:color/black"
        android:textSize="53sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="-0.01"
        android:lineSpacingExtra="4sp"
        android:text="@string/firstPage_description"
        android:textColor="#b5b5b5"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/active_dot"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/nonactive_dot"
            />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/nonactive_dot"
            />
    </LinearLayout>


</LinearLayout>